--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,6 @@
     "express": "^4.17.1",
     "formidable": "^2.0.0-canary.20200504.1",
     "fs-extra": "^9.1.0",
-    "nodemon": "^2.0.7",
-    "ramda": "^0.27.1"
+    "nodemon": "^2.0.7"
   }
 }
